<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewCurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/currency_textview"
        android:textSize="24sp">
    </TextView>
    <EditText
        android:id="@+id/editTextCurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_curr_edittext"
        android:inputType="textCapSentences">
    </EditText>

    <TextView
        android:id="@+id/textViewRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_textview"
        android:textSize="24sp">
    </TextView>
    <EditText
        android:id="@+id/editTextRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_rate_edittext"
        android:inputType="numberDecimal">
    </EditText>

    <TextView
        android:id="@+id/textViewSingDollar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sgd_textview"
        android:textSize="24sp">
    </TextView>

    <EditText
        android:id="@+id/editTextSingDollar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_sgd_edittext"
        android:inputType="numberDecimal">
    </EditText>

    <Button
        android:id="@+id/buttonConvert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/convert_button">
    </Button>
    <TextView
        android:id="@+id/textViewResult"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>

</LinearLayout>