<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewName"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_textview">
    </TextView>
    <EditText
        android:id="@+id/editTextName"
        android:layout_below="@id/textViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:inputType="textCapSentences">
    </EditText>

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_below="@id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_textview">
    </TextView>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewEmail"
        android:layout_marginTop="1dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"></EditText>

    <TextView
        android:id="@+id/textViewCity"
        android:layout_below="@id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/city_textview">
    </TextView>
    <EditText
        android:id="@+id/editTextCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewCity"
        android:hint="@string/city_hint"
        android:inputType="textCapWords">
    </EditText>

    <Button
        android:id="@+id/buttonPreviewMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextCity"
        android:text="@string/preview_message_button">
    </Button>
    <Button
        android:id="@+id/buttonSendEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonPreviewMessage"
        android:text="@string/send_email_button">
    </Button>

    <TextView
        android:id="@+id/textViewPreview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/buttonSendEmail">
    </TextView>

</RelativeLayout>