<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/hint_temp_edittext">
    </EditText>
    <RadioGroup
        android:id="@+id/tempRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/fahrenheitRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fahrenheit_radiobutton">
        </RadioButton>
        <RadioButton
            android:id="@+id/celsiusRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/celsius_radiobutton">
        </RadioButton>
    </RadioGroup>
    <Button
        android:id="@+id/buttonConvert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/convert_button">
    </Button>
    <Button
        android:id="@+id/buttonClear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_button">
    </Button>
    <TextView
        android:id="@+id/textViewResult"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>

</LinearLayout>