<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.singaporetech.travelapp.MainActivity"
    >

    <TextView
        android:id="@+id/headerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_activity_main"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/destinationScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/buttonLinearLayout"
        app:layout_constraintTop_toBottomOf="@id/headerTextView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/destinationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dest_activity_main" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/buttonLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:id="@+id/tempConverterButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/temperature_converter_button"
            app:layout_constraintTop_toBottomOf="@+id/destinationScrollView"
            app:layout_constraintBottom_toTopOf="@+id/currencyConverterButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/currencyConverterButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/currency_converter_button"
            app:layout_constraintTop_toBottomOf="@+id/temperatureConverterButton"
            app:layout_constraintBottom_toTopOf="@+id/emailFriendButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <Button
            android:id="@+id/emailFriendButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/email_friend_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currencyConverterButton" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>